Functioning categories i guess

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,15 @@ html, body {
   font-optical-sizing: auto;
 }
 
+.scroller::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scroller {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
