--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,11 @@ html, body {
     display: none;
 }
 
+.checkbox {
+  height: 20px;
+  width: 20px;
+}
+
 /* Hide scrollbar for IE, Edge and Firefox */
 .scroller {
   -ms-overflow-style: none;  /* IE and Edge */
